Create Project API

--- a/auth-api/auth-api/src/main/resources/application.properties
+++ b/auth-api/auth-api/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=auth-api
 
 server.port=8083
 auth.secret.password= Lkmfdksngjbnvmcxfkjoweijmccxsmnkfnskdf
-db.api.base.url=http://localhost:8084/api/db/employee
+db.api.base.url=http://localhost:8084/api/db
